Fix for jumping v3 notification scrollbar

--- a/src/app/modules/notifications/flyout.component.ng.scss
+++ b/src/app/modules/notifications/flyout.component.ng.scss
@@ -62,6 +62,7 @@
   .m-notificationsFlyout__scrollable {
     max-height: calc(100vh - 72px);
     overflow: scroll;
+    overscroll-behavior: contain; // not supported in all browsers
     @include hide-scrollbar;
   }
 }
